[gd_scene load_steps=20 format=3 uid="uid://clpks2rjkvskm"]

[ext_resource type="Script" path="res://CurrentRun.gd" id="1_rnq25"]
[ext_resource type="Resource" uid="uid://ype7ae050vxg" path="res://data/upgrades/force_upgrade.tres" id="2_218ra"]
[ext_resource type="Resource" uid="uid://dnjuikwv7g0um" path="res://data/upgrades/speed_upgrade.tres" id="3_4ai13"]
[ext_resource type="Resource" uid="uid://bv8od311mhd3g" path="res://data/upgrades/material_upgrade.tres" id="4_sndtv"]
[ext_resource type="Resource" uid="uid://qclp6dumrcog" path="res://data/upgrades/hydraulics_upgrade.tres" id="5_05pn7"]
[ext_resource type="Resource" uid="uid://dow67n5q3k8fd" path="res://data/upgrades/precision_upgrade.tres" id="6_nrotd"]
[ext_resource type="Resource" uid="uid://b0fd8y0r07u2u" path="res://data/upgrades/quality_upgrade.tres" id="7_iytaf"]
[ext_resource type="PackedScene" uid="uid://7t1sx0r2g2tc" path="res://2_simulation.tscn" id="8_8kjlv"]
[ext_resource type="Script" path="res://ForceLabel.gd" id="9_f4pp4"]
[ext_resource type="Theme" uid="uid://q74smvt4fc0e" path="res://data/theme.tres" id="9_tmscb"]
[ext_resource type="Script" path="res://OrderManager.gd" id="10_jittl"]
[ext_resource type="Resource" uid="uid://5q2kvb77tv84" path="res://data/order_list.tres" id="11_btxwp"]
[ext_resource type="PackedScene" uid="uid://bn1wj400srr3t" path="res://order.tscn" id="12_2ynvf"]
[ext_resource type="Script" path="res://FadeUI.gd" id="12_jtco1"]
[ext_resource type="Script" path="res://SkipButton.gd" id="13_rkvay"]
[ext_resource type="Script" path="res://IndicatorLabelHandler.gd" id="14_bf6xs"]
[ext_resource type="PackedScene" uid="uid://d2wqud77qew7f" path="res://change_press_ui.tscn" id="15_48w5f"]
[ext_resource type="Script" path="res://ChangePressMenu.gd" id="15_cveyd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uqjv4"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="CurrentRun" type="Node"]
script = ExtResource("1_rnq25")
upgrades = Array[Resource("res://UpgradeRes.gd")]([ExtResource("3_4ai13"), ExtResource("2_218ra"), ExtResource("4_sndtv"), ExtResource("6_nrotd"), ExtResource("7_iytaf"), ExtResource("5_05pn7")])

[node name="Simulation" parent="." instance=ExtResource("8_8kjlv")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_tmscb")

[node name="MainUI" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 544.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.162066, 0.162066, 0.162066, 1)

[node name="AdditionalButtons" type="HBoxContainer" parent="CanvasLayer/Control/MainUI"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -252.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ChangePressButton" type="Button" parent="CanvasLayer/Control/MainUI/AdditionalButtons"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Change Press
"

[node name="Panel" type="Panel" parent="CanvasLayer/Control/MainUI/AdditionalButtons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Current Press Force"
theme_override_styles/panel = SubResource("StyleBoxFlat_uqjv4")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MainUI/AdditionalButtons/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20

[node name="ForceLabel" type="Label" parent="CanvasLayer/Control/MainUI/AdditionalButtons/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Current Force:"
vertical_alignment = 1
script = ExtResource("9_f4pp4")

[node name="Panel2" type="Panel" parent="CanvasLayer/Control/MainUI/AdditionalButtons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
tooltip_text = "Your Funds"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MainUI/AdditionalButtons/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20

[node name="CurrencyLabel" type="Label" parent="CanvasLayer/Control/MainUI/AdditionalButtons/Panel2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "$0"

[node name="SkipButton" type="Button" parent="CanvasLayer/Control/MainUI/AdditionalButtons"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Skip"
script = ExtResource("13_rkvay")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MainUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Upgrades" type="HBoxContainer" parent="CanvasLayer/Control/MainUI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="OrderManager" type="Panel" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades" node_paths=PackedStringArray("order_uis")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("10_jittl")
order_list = ExtResource("11_btxwp")
order_uis = [NodePath("FadeUI/MarginContainer/VBoxContainer/Order"), NodePath("FadeUI/MarginContainer/VBoxContainer/Order2"), NodePath("FadeUI/MarginContainer/VBoxContainer/Order3")]

[node name="FadeUI" type="Control" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_jtco1")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager/FadeUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager/FadeUI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager/FadeUI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Orders"
horizontal_alignment = 1

[node name="Order" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager/FadeUI/MarginContainer/VBoxContainer" instance=ExtResource("12_2ynvf")]
layout_mode = 2

[node name="Order2" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager/FadeUI/MarginContainer/VBoxContainer" instance=ExtResource("12_2ynvf")]
layout_mode = 2

[node name="Order3" parent="CanvasLayer/Control/MainUI/MarginContainer/Upgrades/OrderManager/FadeUI/MarginContainer/VBoxContainer" instance=ExtResource("12_2ynvf")]
layout_mode = 2

[node name="IndicatorLabelHandler" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -54.0
offset_bottom = -54.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("14_bf6xs")

[node name="ChangePressMenu" type="ColorRect" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)
script = ExtResource("15_cveyd")

[node name="Label" type="Label" parent="CanvasLayer/Control/ChangePressMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -163.0
offset_right = 30.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
text = "Presses"

[node name="ChangePressContainer" type="HBoxContainer" parent="CanvasLayer/Control/ChangePressMenu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 418.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer2" parent="CanvasLayer/Control/ChangePressMenu/ChangePressContainer" instance=ExtResource("15_48w5f")]
layout_mode = 2
